# argosmt

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  config.cfg  config.h.in  config_as.cfg  config_bel.cfg  config_fast.cfg  config_quant.cfg  configure  configure.ac  ts_config.cfg
.gitignore/: .gitignore
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  argosmt.cpp  argosmt_dimacs.cpp  argosmt_solver_interface.cpp  argosmt_solver_interface.hpp  dimacs_solver_interface.cpp  dimacs_solver_interface.hpp
src/auxiliary/: Makefile.am  Makefile.in  backjump_stack.hpp  cmd_line_parser.cpp  cmd_line_parser.hpp  common.hpp  conditional_tbb_wrapper.hpp  cow_wrapper.hpp  hash_vector.hpp  history_saver.hpp  object_factory.hpp  solver_configuration.cpp  solver_configuration.hpp  timeout.hpp  vector_hash_code.hpp  wall_clock.hpp
src/data_structures/: Makefile.am  Makefile.in  argosmt_expression_data.hpp  clause.cpp  clause.hpp  conflict_set.cpp  conflict_set.hpp  explanation.cpp  explanation.hpp  heap.hpp  proofs.cpp  proofs.hpp  trail.cpp  trail.hpp
src/expression_library/: Makefile.am  Makefile.in  basic_types.cpp  basic_types.hpp  expression.cpp  expression.hpp  expression_library.hpp  lexer.cpp  lexer.lpp  logic_declaration.cpp  logic_declaration.hpp  parser.cpp  parser.hpp  parser.ypp  search_mode.hpp  signature.cpp  signature.hpp  smtlib_api.cpp  smtlib_api.hpp  sort.cpp  sort.hpp  theory_declaration.cpp  theory_declaration.hpp
src/quantifiers/: Makefile.am  Makefile.in  e_matching_quantifiers_processor.cpp  e_matching_quantifiers_processor.hpp  enumerative_quantifiers_processor.cpp  enumerative_quantifiers_processor.hpp  quantifiers_processor.hpp
src/solver/: Makefile.am  Makefile.in  formula_transformer.cpp  formula_transformer.hpp  logging_solver_observer.hpp  solver.cpp  solver.hpp  solver_observer.hpp  statistics_solver_observer.hpp
src/strategies/: Makefile.am  Makefile.in  all_forget_selection_strategy.hpp  always_negative_polarity_selection_strategy.hpp  always_positive_polarity_selection_strategy.hpp  clause_activity_forget_selection_strategy.hpp  clause_length_forget_selection_strategy.hpp  conflict_counting_restart_strategy.cpp  conflict_counting_restart_strategy.hpp  first_undefined_literal_selection_strategy.cpp  first_undefined_literal_selection_strategy.hpp  forget_selection_strategy.hpp  forget_strategy.hpp  geometric_forget_strategy.hpp  interactive_literal_selection_strategy.hpp  interactive_polarity_selection_strategy.hpp  literal_selection_strategy.hpp  never_forget_strategy.hpp  never_restart_strategy.hpp  percent_to_forget_selection_strategy.hpp  polarity_selection_strategy.hpp  random_decorater_literal_selection_strategy.hpp  random_literal_selection_strategy.hpp  random_polarity_selection_strategy.hpp  restart_strategy.hpp  saved_polarity_selection_strategy.hpp  vsids_literal_selection_strategy.cpp  vsids_literal_selection_strategy.hpp
src/theories/: Makefile.am  Makefile.in  alldiff_constraint_handler.cpp  alldiff_constraint_handler.hpp  arithmetic_canonizer.hpp  arithmetic_theory.cpp  arithmetic_theory.hpp  bipartite_graph.cpp  bool_theory.cpp  bool_theory.hpp  bugtest.hpp  constraint_handler.hpp  csp_explanation_minimizer.hpp  csp_theory.cpp  csp_theory.hpp  csp_value_order_strategy.hpp  csp_variable_order_strategy.hpp  domain_handler.cpp  domain_handler.hpp  euf_theory.cpp  euf_theory.hpp  hybrid_types.hpp  linear_polynomial.hpp  most_constrained_csp_variable_order_strategy.hpp  most_preferred_csp_value_order_strategy.hpp  propagation_handler.hpp  simple_csp_value_order_strategy.hpp  simple_csp_variable_order_strategy.hpp  sum_constraint_handler.cpp  sum_constraint_handler.hpp  theory.hpp
src/theory_solvers/: Makefile.am  Makefile.in  alldiff_constraint_handler.cpp  alldiff_constraint_handler.hpp  arithmetic_canonizer.hpp  arithmetic_theory_solver.cpp  arithmetic_theory_solver.hpp  bipartite_graph.cpp  bipartite_graph.hpp  clause_theory_solver.cpp  clause_theory_solver.hpp  constraint_handler.hpp  csp_common_data.hpp  csp_explanation_minimizer.hpp  csp_theory_solver.cpp  csp_theory_solver.hpp  csp_value_order_strategy.hpp  csp_variable_order_strategy.hpp  domain_handler.cpp  domain_handler.hpp  euf_theory_solver.cpp  euf_theory_solver.hpp  graph_lex_minimal_constraint_handler.cpp  graph_lex_minimal_constraint_handler.hpp  hybrid_types.hpp  linear_polynomial.hpp  most_constrained_csp_variable_order_strategy.hpp  most_preferred_csp_value_order_strategy.hpp  propagation_handler.hpp  simple_csp_value_order_strategy.hpp  simple_csp_variable_order_strategy.hpp  sum_constraint_handler.cpp  sum_constraint_handler.hpp  theory_solver.hpp
