noinst_LIBRARIES = libauxiliary.a

libauxiliary_a_SOURCES = cmd_line_parser.cpp \
	                 solver_configuration.cpp

noinst_HEADERS = object_factory.hpp \
	         cow_wrapper.hpp \
	         backjump_stack.hpp \
	         wall_clock.hpp \
	         timeout.hpp \
	 	 cmd_line_parser.hpp \
	         hash_vector.hpp \
	         vector_hash_code.hpp \
	         common.hpp \
		 history_saver.hpp \
		 solver_configuration.hpp

AM_CXXFLAGS = -Wall
